fix scroll overflow

--- a/dev/scss/_main.scss
+++ b/dev/scss/_main.scss
@@ -356,6 +356,8 @@ footer {
 
 .stripe.instagram-stripe {
   white-space: nowrap;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .stripe.map {
